--- a/master/chute.html
+++ b/master/chute.html
@@ -78,7 +78,7 @@
 <h1>Chute Report</h1>
 <div>
 <p>Project: ChuteExample.xcodeproj</p>
-<p>Test Date: 2018-03-17 23:21:28 +0000</p>
+<p>Test Date: 2018-03-17 23:18:15 +0000</p>
 <p>Branch: master</p>
 </div>
 </div>
@@ -87,23 +87,23 @@
 <div>
 <div class="summary">
     <div class="summary-item alert alert-info">
-        <div class="summary-item-text"><h1>7</h1></div>
+        <div class="summary-item-text"><h1>6</h1></div>
         <div class="summary-item-text"><h3>Total Tests</h3></div>
     </div>
 
     <div class="summary-item alert alert-success">
-        <div class="summary-item-text"><h1>7</h1></div>
+        <div class="summary-item-text"><h1>5</h1></div>
         <div class="summary-item-text"><h3>Success Tests</h3></div>
     </div>
 
     <div class="summary-item alert alert-danger">
-        <div class="summary-item-text"><h1>0</h1></div>
+        <div class="summary-item-text"><h1>1</h1></div>
         <div class="summary-item-text"><h3>Failed Tests</h3></div>
     </div>
 </div>
 <div class="summary">
     <div class="summary-item alert alert-info">
-        <div class="summary-item-text"><h1>92 %</h1></div>
+        <div class="summary-item-text"><h1>100 %</h1></div>
         <div class="summary-item-text"><h3>Avg Coverage</h3></div>
     </div>
 
@@ -119,7 +119,7 @@
 </div>
 <div class="summary-1-column">
     <div class="summary-item alert alert-info">
-        <div class="summary-item-text"><h1>6</h1></div>
+        <div class="summary-item-text"><h1>5</h1></div>
         <div class="summary-item-text"><h3>Views Captured</h3></div>
     </div>
 </div>
@@ -130,7 +130,7 @@
     </div>
 
     <div class="summary-item alert alert-success">
-        <div class="summary-item-text"><h1>3</h1></div>
+        <div class="summary-item-text"><h1>2</h1></div>
         <div class="summary-item-text"><h3>Fonts Found</h3></div>
     </div>
 </div>
@@ -142,7 +142,7 @@
 <table class="table">
 <tbody>
 <tr><td><strong>ViewControllerTests</strong></td></tr>
-<tr class="table-success"><td>testOneMoreAdditionalTest</td></tr><tr class="table-success"><td>testOneTestFailsForReporting</td></tr><tr class="table-success"><td>testViewControllerCanBeInstantiated</td></tr><tr class="table-success"><td>testViewControllerWithFullConfigure</td></tr><tr class="table-success"><td>testViewControllerWithNewDetailsTest</td></tr><tr class="table-success"><td>testViewControllerWithNoDetails</td></tr><tr class="table-success"><td>testViewControllerWithOneDetail</td></tr>
+<tr class="table-danger"><td>testOneTestFailsForReporting</td></tr><tr class="table-success"><td>testViewControllerCanBeInstantiated</td></tr><tr class="table-success"><td>testViewControllerWithFullConfigure</td></tr><tr class="table-success"><td>testViewControllerWithNoDetails</td></tr><tr class="table-success"><td>testViewControllerWithOneDetail</td></tr><tr class="table-success"><td>testViewControllerWithTwoDetails</td></tr>
 </tbody>
 </table>
 </div>
@@ -160,7 +160,7 @@
 <tr class="table-success">
 <td>ChuteExample.app</td>
 <td>ViewController.swift</td>
-<td>92%</td>
+<td>100%</td>
 </tr>
 </tbody>
 </table>
@@ -171,27 +171,23 @@
 <div class="gallery">
 <div class="gallery-image">
     <h5>ViewControllerWithFirstDetailOnly</h5>
-    <img src="attachments/ViewControllerWithFirstDetailOnly_1_68DEC966-BED1-4279-99CD-C0A2F6D706AA.png" alt="ViewControllerWithFirstDetailOnly">
+    <img src="attachments/ViewControllerWithFirstDetailOnly_1_B018351F-425F-492B-82E0-DFC967AE0906.png" alt="ViewControllerWithFirstDetailOnly">
     <div class="clearfix"></div>
 </div><div class="gallery-image">
     <h5>ViewControllerWithFullConfigure</h5>
-    <img src="attachments/ViewControllerWithFullConfigure_1_711DF2A6-7053-4792-9E19-1E0D6245D866.png" alt="ViewControllerWithFullConfigure">
-    <div class="clearfix"></div>
-</div><div class="gallery-image">
-    <h5>ViewControllerWithFullConfigureNewScreenshot</h5>
-    <img src="attachments/ViewControllerWithFullConfigureNewScreenshot_1_E9F0BCC1-96C1-46B2-80AA-523134C130B6.png" alt="ViewControllerWithFullConfigureNewScreenshot">
-    <div class="clearfix"></div>
-</div><div class="gallery-image">
-    <h5>ViewControllerWithNewDetails</h5>
-    <img src="attachments/ViewControllerWithNewDetails_1_66ECC16D-C1F2-4EC0-BCA6-6FC1AFABD062.png" alt="ViewControllerWithNewDetails">
+    <img src="attachments/ViewControllerWithFullConfigure_1_E71F8F5C-B2D8-4BA1-9B9B-9E923C7572CC.png" alt="ViewControllerWithFullConfigure">
     <div class="clearfix"></div>
 </div><div class="gallery-image">
     <h5>ViewControllerWithNoDetails</h5>
-    <img src="attachments/ViewControllerWithNoDetails_1_1704CDD6-5422-4E73-86FC-D6170BEBF1C9.png" alt="ViewControllerWithNoDetails">
+    <img src="attachments/ViewControllerWithNoDetails_1_10A24F05-FDE7-43E2-881F-1A9D40DA89F8.png" alt="ViewControllerWithNoDetails">
+    <div class="clearfix"></div>
+</div><div class="gallery-image">
+    <h5>ViewControllerWithTwoDetails</h5>
+    <img src="attachments/ViewControllerWithTwoDetails_1_C6D886F8-717C-46CB-9B04-523CFF9F8D65.png" alt="ViewControllerWithTwoDetails">
     <div class="clearfix"></div>
 </div><div class="gallery-image">
     <h5>ViewControllerWithoutConfigure</h5>
-    <img src="attachments/ViewControllerWithoutConfigure_1_3A6DF077-C650-4704-A4DF-97619DC8542E.png" alt="ViewControllerWithoutConfigure">
+    <img src="attachments/ViewControllerWithoutConfigure_1_041568BB-25E6-4FB3-83AC-1C96A334E722.png" alt="ViewControllerWithoutConfigure">
     <div class="clearfix"></div>
 </div>
 </div>
@@ -210,8 +206,8 @@
 </div></td><td>#000000</td></tr><tr><td>
 <div class="color-swatch" style="background-color:#0000FF;float: left;width: 60px;height: 60px;margin: 0 5px;border-radius: 3px">
 </div></td><td>#0000FF</td></tr><tr><td>
-<div class="color-swatch" style="background-color:#00FF00;float: left;width: 60px;height: 60px;margin: 0 5px;border-radius: 3px">
-</div></td><td>#00FF00</td></tr><tr><td>
+<div class="color-swatch" style="background-color:#FF0000;float: left;width: 60px;height: 60px;margin: 0 5px;border-radius: 3px">
+</div></td><td>#FF0000</td></tr><tr><td>
 <div class="color-swatch" style="background-color:#FF9900;float: left;width: 60px;height: 60px;margin: 0 5px;border-radius: 3px">
 </div></td><td>#FF9900</td></tr><tr><td>
 <div class="color-swatch" style="background-color:#FFFFFF;float: left;width: 60px;height: 60px;margin: 0 5px;border-radius: 3px">
@@ -229,7 +225,7 @@
 <th>Size</th>
 </thead>
 <tbody>
-<tr><td>.SFUIDisplay</td><td>28</td></tr><tr><td>.SFUIText</td><td>17</td></tr><tr><td>.SFUIText</td><td>19</td></tr>
+<tr><td>.SFUIDisplay</td><td>28</td></tr><tr><td>.SFUIText</td><td>17</td></tr>
 </tbody>
 </table>
 </div>
