--- a/1/chute.html
+++ b/1/chute.html
@@ -78,8 +78,8 @@
 <h1>Chute Report</h1>
 <div>
 <p>Project: ChuteExample.xcodeproj</p>
-<p>Test Date: 2018-03-17 14:53:04 +0000</p>
-<p>Branch: </p>
+<p>Test Date: 2018-03-18 01:01:18 +0000</p>
+<p>Branch: test_chute_differences</p>
 </div>
 </div>
 <div class="jumbotron">
@@ -87,23 +87,23 @@
 <div>
 <div class="summary">
     <div class="summary-item alert alert-info">
-        <div class="summary-item-text"><h1>6</h1></div>
+        <div class="summary-item-text"><h1>7</h1></div>
         <div class="summary-item-text"><h3>Total Tests</h3></div>
     </div>
 
     <div class="summary-item alert alert-success">
-        <div class="summary-item-text"><h1>5</h1></div>
+        <div class="summary-item-text"><h1>7</h1></div>
         <div class="summary-item-text"><h3>Success Tests</h3></div>
     </div>
 
     <div class="summary-item alert alert-danger">
-        <div class="summary-item-text"><h1>1</h1></div>
+        <div class="summary-item-text"><h1>0</h1></div>
         <div class="summary-item-text"><h3>Failed Tests</h3></div>
     </div>
 </div>
 <div class="summary">
     <div class="summary-item alert alert-info">
-        <div class="summary-item-text"><h1>100 %</h1></div>
+        <div class="summary-item-text"><h1>92 %</h1></div>
         <div class="summary-item-text"><h3>Avg Coverage</h3></div>
     </div>
 
@@ -119,7 +119,7 @@
 </div>
 <div class="summary-1-column">
     <div class="summary-item alert alert-info">
-        <div class="summary-item-text"><h1>5</h1></div>
+        <div class="summary-item-text"><h1>6</h1></div>
         <div class="summary-item-text"><h3>Views Captured</h3></div>
     </div>
 </div>
@@ -130,7 +130,7 @@
     </div>
 
     <div class="summary-item alert alert-success">
-        <div class="summary-item-text"><h1>2</h1></div>
+        <div class="summary-item-text"><h1>3</h1></div>
         <div class="summary-item-text"><h3>Fonts Found</h3></div>
     </div>
 </div>
@@ -142,7 +142,7 @@
 <table class="table">
 <tbody>
 <tr><td><strong>ViewControllerTests</strong></td></tr>
-<tr class="table-danger"><td>testOneTestFailsForReporting</td></tr><tr class="table-success"><td>testViewControllerCanBeInstantiated</td></tr><tr class="table-success"><td>testViewControllerWithFullConfigure</td></tr><tr class="table-success"><td>testViewControllerWithNoDetails</td></tr><tr class="table-success"><td>testViewControllerWithOneDetail</td></tr><tr class="table-success"><td>testViewControllerWithTwoDetails</td></tr>
+<tr class="table-success"><td>testOneMoreAdditionalTest</td></tr><tr class="table-success"><td>testOneTestFailsForReporting</td></tr><tr class="table-success"><td>testViewControllerCanBeInstantiated</td></tr><tr class="table-success"><td>testViewControllerWithFullConfigure</td></tr><tr class="table-success"><td>testViewControllerWithNewDetailsTest</td></tr><tr class="table-success"><td>testViewControllerWithNoDetails</td></tr><tr class="table-success"><td>testViewControllerWithOneDetail</td></tr>
 </tbody>
 </table>
 </div>
@@ -160,7 +160,7 @@
 <tr class="table-success">
 <td>ChuteExample.app</td>
 <td>ViewController.swift</td>
-<td>100%</td>
+<td>92%</td>
 </tr>
 </tbody>
 </table>
@@ -171,23 +171,27 @@
 <div class="gallery">
 <div class="gallery-image">
     <h5>ViewControllerWithFirstDetailOnly</h5>
-    <img src="attachments/ViewControllerWithFirstDetailOnly_1_B11404B8-740C-4FCB-82A1-EFE5210E7135.png" alt="ViewControllerWithFirstDetailOnly">
+    <img src="attachments/ViewControllerWithFirstDetailOnly_1_6311C604-4C54-46C6-85F1-C6CB79EB793F.png" alt="ViewControllerWithFirstDetailOnly">
     <div class="clearfix"></div>
 </div><div class="gallery-image">
     <h5>ViewControllerWithFullConfigure</h5>
-    <img src="attachments/ViewControllerWithFullConfigure_1_DB16392B-999D-40B3-8108-40AD30D6DC3D.png" alt="ViewControllerWithFullConfigure">
+    <img src="attachments/ViewControllerWithFullConfigure_1_EB04D9A3-79E3-4574-8D69-7AB1D0DA9381.png" alt="ViewControllerWithFullConfigure">
+    <div class="clearfix"></div>
+</div><div class="gallery-image">
+    <h5>ViewControllerWithFullConfigureNewScreenshot</h5>
+    <img src="attachments/ViewControllerWithFullConfigureNewScreenshot_1_51BF9FF5-3921-4503-9651-1FABEDABD610.png" alt="ViewControllerWithFullConfigureNewScreenshot">
+    <div class="clearfix"></div>
+</div><div class="gallery-image">
+    <h5>ViewControllerWithNewDetails</h5>
+    <img src="attachments/ViewControllerWithNewDetails_1_61A963CB-D37A-4067-AA1A-CBA91E704C44.png" alt="ViewControllerWithNewDetails">
     <div class="clearfix"></div>
 </div><div class="gallery-image">
     <h5>ViewControllerWithNoDetails</h5>
-    <img src="attachments/ViewControllerWithNoDetails_1_3A067F89-A9C3-420E-AA44-A39A9AFE60C5.png" alt="ViewControllerWithNoDetails">
-    <div class="clearfix"></div>
-</div><div class="gallery-image">
-    <h5>ViewControllerWithTwoDetails</h5>
-    <img src="attachments/ViewControllerWithTwoDetails_1_F4A08CB0-6715-439F-BA52-CC411B2C0D80.png" alt="ViewControllerWithTwoDetails">
+    <img src="attachments/ViewControllerWithNoDetails_1_42D85996-02A8-4165-BBBC-7D3A237B77FB.png" alt="ViewControllerWithNoDetails">
     <div class="clearfix"></div>
 </div><div class="gallery-image">
     <h5>ViewControllerWithoutConfigure</h5>
-    <img src="attachments/ViewControllerWithoutConfigure_1_E099BFC3-4363-4A4D-974D-D0935102B110.png" alt="ViewControllerWithoutConfigure">
+    <img src="attachments/ViewControllerWithoutConfigure_1_CCFECA84-47B3-42E9-BB68-6A42F17322BB.png" alt="ViewControllerWithoutConfigure">
     <div class="clearfix"></div>
 </div>
 </div>
@@ -206,8 +210,8 @@
 </div></td><td>#000000</td></tr><tr><td>
 <div class="color-swatch" style="background-color:#0000FF;float: left;width: 60px;height: 60px;margin: 0 5px;border-radius: 3px">
 </div></td><td>#0000FF</td></tr><tr><td>
-<div class="color-swatch" style="background-color:#FF0000;float: left;width: 60px;height: 60px;margin: 0 5px;border-radius: 3px">
-</div></td><td>#FF0000</td></tr><tr><td>
+<div class="color-swatch" style="background-color:#00FF00;float: left;width: 60px;height: 60px;margin: 0 5px;border-radius: 3px">
+</div></td><td>#00FF00</td></tr><tr><td>
 <div class="color-swatch" style="background-color:#FF9900;float: left;width: 60px;height: 60px;margin: 0 5px;border-radius: 3px">
 </div></td><td>#FF9900</td></tr><tr><td>
 <div class="color-swatch" style="background-color:#FFFFFF;float: left;width: 60px;height: 60px;margin: 0 5px;border-radius: 3px">
@@ -225,7 +229,7 @@
 <th>Size</th>
 </thead>
 <tbody>
-<tr><td>.SFUIDisplay</td><td>28</td></tr><tr><td>.SFUIText</td><td>17</td></tr>
+<tr><td>.SFUIDisplay</td><td>28</td></tr><tr><td>.SFUIText</td><td>17</td></tr><tr><td>.SFUIText</td><td>19</td></tr>
 </tbody>
 </table>
 </div>
